enable gradlew run